# url_shortener

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: build.yml
application/: main_web.py  web_entrypoint.py
application/clients/: __init__.py
application/clients/parser/: __init__.py  core.py  proxies.py  useragent.py
application/common/: __init__.py  cache.py  constants.py  errors.py  utils.py
application/config/: __init__.py  application.py  auth.py  client.py  db.py  openapi.py  sentry.py
application/dbs/: __init__.py  mongo.py
application/domain/: entities.py  errors.py  types.py
application/domain/goods/: __init__.py  entities.py  provider.py  repositories.py  servicies.py  types.py
application/domain/short_url/: __init__.py  entities.py  repositories.py  servicies.py  types.py
application/server/: app.py
application/server/core/: __init__.py
application/server/core/exceptions/: __init__.py  handlers.py
application/server/core/middleware/: __init__.py  middlewares.py
application/server/core/security/: __init__.py  auths.py
application/server/routers/: __init__.py
application/tests/test_api/: test_app_status.py
application/tests/test_domain/: test_short_url.py
application/web/: app.py  utils.py
application/web/core/exceptions/: handlers.py
application/web/core/middleware/: __init__.py  middlewares.py  utils.py
application/web/routers/: __init__.py
docker/: docker-compose-dev.yml
docker/application/: Dockerfile
docs/: index.md
scripts/: docker-dev-down.sh  docker-dev-up.sh
(+17 files in other folders)
