[tool.poetry]
name = "url-shortener"
version = "0.0.1"
description = "Example of using fastpai with ddd for making url shortener"
authors = ["Alexandr Bogut"]
license = "MIT"
packages = [
    { include = "application" },
]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.1"
fastapi = "^0.62.0"
pydantic = "^1.7.3"
loguru = "^0.5.3"
email-validator = "^1.1.2"
motor = "^2.3.0"
sentry_sdk = "^0.19.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
requests = "^2.25.0"
pytest = "^6.2.0"
pytest-asyncio = "^0.14.0"
pre-commit = "^2.9.3"
pytest-cov = "^2.10.1"
mkdocs = "^1.1.2"
mkdocs-material = "^4.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
