[tool.poetry]
name = "url-shortener"
version = "0.0.1"
description = "Example of using fastpai with ddd for making url shortener"
authors = ["Alexandr Bogut"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "application" },
]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.21.1"
fastapi = "^0.95.1"
pydantic = "^1.7.3"
loguru = "^0.6.0"
motor = "^2.3.0"
sentry-sdk = "^1.12.1"


[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
requests = "^2.25.0"
pytest = "^6.2.0"
pytest-asyncio = "^0.14.0"
pre-commit = "^2.9.3"
pytest-cov = "^2.10.1"
mkdocs = "^1.1.2"
mkdocs-material = "^4.6.3"
httpx = "^0.23.1"
mypy = "^0.991"
vulture = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
